fix up margins for overlapping code

--- a/css/main.css
+++ b/css/main.css
@@ -338,7 +338,7 @@ h1, h2, h3, h4, h5, h6, h7 p {
 a.interest-item {
     font-size: 14px;
     padding: 5px;
-    margin: 0 5px;
+    margin: 0 10px;
     text-decoration: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
